<?xml version="1.0" encoding="UTF-8"?>
	<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.health</groupId>
	<artifactId>HealthNutrition</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>war</packaging>

	<name>HealthNutrition</name>
	<description>frontend part for our HealthNutrition project</description>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.1.7.RELEASE</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>1.8</java.version>
		<project.youtube.version>v3-rev182-1.22.0</project.youtube.version>
		<project.http.version>1.20.0</project.http.version>
        <project.oauth.version>1.20.0</project.oauth.version>
	</properties>
	

	<repositories>
  
	  <repository>
	   <id>xuggle repo</id>
	   <url>https://www.dcm4che.org/maven2/</url>
	  </repository>
	  
	   
        <repository>
            <id>google-api-services</id>
            <url>http://google-api-client-libraries.appspot.com/mavenrepo</url>
        </repository>
   
  
 	</repositories>

	<dependencies>
	
	   <!-- YouTube Data V3 support -->
        <dependency>
            <groupId>com.google.apis</groupId>
            <artifactId>google-api-services-youtube</artifactId>
            <version>${project.youtube.version}</version>
        </dependency>
        
        <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
       <version>3.1.0</version>
    </dependency>
        
           <!-- This dependency is only used for the Topics API sample, which requires the Jackson JSON parser -->
        <dependency>
            <groupId>org.codehaus.jackson</groupId>
            <artifactId>jackson-mapper-asl</artifactId>
            <version>1.9.4</version>
        </dependency>

        <dependency>
            <groupId>com.google.http-client</groupId>
            <artifactId>google-http-client-jackson2</artifactId>
            <version>${project.http.version}</version>
        </dependency>
		
		<dependency>
			<groupId>jakarta.json</groupId>
			<artifactId>jakarta.json-api</artifactId>
			<version>2.1.0</version>
		</dependency>

        <dependency>
            <groupId>com.google.oauth-client</groupId>
            <artifactId>google-oauth-client-jetty</artifactId>
            <version>${project.oauth.version}</version>
        </dependency>
       
        <dependency>
    	<groupId>org.apache.httpcomponents</groupId>
    	<artifactId>httpclient</artifactId>
		</dependency>

        <dependency>
            <groupId>com.google.collections</groupId>
            <artifactId>google-collections</artifactId>
            <version>1.0</version>
        </dependency>
        
        <dependency>
 			 <groupId>org.jsoup</groupId>
 			 <artifactId>jsoup</artifactId>
			 <version>1.17.2</version>
		</dependency>
        
	<dependency>
		    <groupId>xuggle</groupId>
		    <artifactId>xuggle-xuggler</artifactId>
		    <version>5.4</version>
		</dependency>
		
		 <dependency>
    	<groupId>org.thymeleaf.extras</groupId>
    	<artifactId>thymeleaf-extras-springsecurity5</artifactId>
		</dependency>

	<dependency>
	   <groupId>org.apache.commons</groupId>
	   <artifactId>commons-lang3</artifactId>
	   <version>3.9</version>
	</dependency>
		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
		  

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
		</dependency>
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-mail</artifactId>
		</dependency>
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-jdbc</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>

		<!-- These dependencies are used for caching-->
	  	<dependency>
      		<groupId>org.springframework.boot</groupId>
      		<artifactId>spring-boot-starter-cache</artifactId>
      	</dependency>
      
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context-support</artifactId>
		</dependency>

		<dependency>
		    <groupId>org.springframework.security</groupId>
		    <artifactId>spring-security-config</artifactId>	    
		</dependency>
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>
		
	 	<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-tomcat</artifactId>
			<scope>provided</scope>
		</dependency>
		
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<!--runtime -->
			<scope>provided</scope>
		</dependency>
		
      	<dependency>
	    	<groupId>org.apache.pdfbox</groupId>
    		<artifactId>pdfbox</artifactId>
    		<version>2.0.27</version>
		</dependency>
	
    	<dependency>
    		<groupId>org.hibernate</groupId>
    		<artifactId>hibernate-ehcache</artifactId>
		</dependency>

      	<dependency>
      		<groupId>javax.cache</groupId>
      		<artifactId>cache-api</artifactId>
      	</dependency>
      	
      	<dependency>
    		 <groupId>org.json</groupId>
   			 <artifactId>json</artifactId>
   			 <version>20231013</version>
		</dependency>

		 <dependency>
      		  <groupId>org.apache.tika</groupId>
       		  <artifactId>tika-core</artifactId>
      		  <version>2.9.1</version> 
   		</dependency>
    	
    	<dependency>
        		<groupId>org.apache.tika</groupId>
        		<artifactId>tika-parsers-standard-package</artifactId>
        		<exclusions>
					<exclusion>
						<groupId>xml-apis</groupId>
						<artifactId>xml-apis</artifactId>
					</exclusion>
				</exclusions>
       			 <version>2.9.1</version> 
        </dependency>
       
	</dependencies>

	<build>
	<finalName>HealthNutrition</finalName>
		<plugins>
			
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			
			 <plugin>
               <groupId>pl.project13.maven</groupId>
			  <artifactId>git-commit-id-plugin</artifactId>
			  <version>4.0.0</version>
            </plugin> 
		</plugins>
	</build>


</project>
